<resources>
    <string name="app_name">PhotogramV2</string>
    <string name="menu">Menú</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="next">Iniciar Sesión</string>
    <string name="fotos">Fotos</string>
    <string name="creditos">Créditos</string>
    <string name="salir">Salir</string>
    <string name="usuario">Info. del Usuario</string>
    <string name="nusuario">Nombre del Usuario: %s</string>
    <string name="rusuario"> Que pasa guapo, pongo un poco de relleno
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
        labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
        ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat
        nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id
        est laborum. </string>
    <string name="comenzar">Comenzar</string>
    <string name="volver">Volver</string>
    <string name="autor">Autor:</string>
    <string name="descripcion">Descripción:</string>
    <string name="tuser">%s estás usando la versión 2 de Photogram</string>
    <string name="desc">Photogram es una aplicación en la que los usuarios pueden subir fotos, con una breve descripción
    e indicar la categoría; Además de la posibilidad de interactuar con las fotos de otros usuarios.</string>
    <string name="info">Photogram es una aplicación en la que los usuarios pueden subir fotos, con una breve descripción
    e indicar la categoría; Además de la posibilidad de interactuar con las fotos de otros usuarios. Podrás marcar tus
        fotos favoritas para verlas en la sección de favoritos, si clickeas en una imagen obtendras una mejor vista,
        Además en el menú podrás ver información de la aplicación y personal.</string>
    <string name="bienvenida">¡Bienvenido a Photogram! Por favor registrese.</string>
    <string name="user">Usuario:</string>
    <string name="loginEr">Identifíquese</string>
    <string name="foto">Foto de: </string>
    <string name="tosatfav">Ha regresado a favoritos</string>
    <string name="tosatfoto">Ha regresado a descubrir</string>
    <string name="casa">Menú</string>
    <string name="descr">Descubrir</string>
    <string name="fav">Favoritos</string>
    <string name="userinf">Ususario</string>
    <string name="log">Iniciar sesión</string>
    <string name="reg">Registrarse</string>
    <string name="loginSeleccionarOpcion">Seleccione una opción</string>
    <string name="loginUsuarioIncorrecto">Usuario incorrecto</string>
    <string name="registrarUsuarioIcorrecto">El usuario ya existe</string>
    <string name="DSTP">No volver a mostrar esta página</string>
    <string name="Coment">Comentarios</string>
    <string name="add">Añadir</string>
</resources>