<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@id/menuFragment"
        android:icon="@drawable/home"
        android:title="@string/casa"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@id/fotoFragment"
        android:icon="@drawable/lupa"
        android:title="@string/descr"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@id/favoritosFragment"
        android:icon="@drawable/favoritos"
        android:title="@string/fav"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@id/usuarioFragment"
        android:icon="@drawable/user"
        android:title="@string/userinf"
        app:showAsAction="ifRoom"/>

</menu>
