<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/ivFoto"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_marginTop="16dp"
        android:background="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/tvFotoAutor"
        app:layout_constraintEnd_toStartOf="@+id/ivFav"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ivFav"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginEnd="88dp"
        android:background="@color/white"
        android:src="@drawable/vacio"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/ivFoto"
        tools:layout_editor_absoluteY="101dp"
        app:layout_constraintTop_toTopOf="@+id/ivFoto"
        app:layout_constraintBottom_toBottomOf="@id/ivFoto"/>

    <TextView
        android:id="@+id/tvFotoAutor"
        android:layout_width="147dp"
        android:layout_height="wrap_content"
        android:text="@string/autor"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/tv1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.526"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivFoto" />

    <TextView
        android:id="@+id/tvFotoDescripcion"
        android:layout_width="133dp"
        android:layout_height="wrap_content"
        android:text="@string/descripcion"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/tv2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv1" />

    <TextView
        android:id="@+id/tv2"
        android:layout_width="133dp"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/btnVolverZ"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvFotoDescripcion"
        tools:text="Esta foto representa...." />

    <TextView
        android:id="@+id/tv1"
        android:layout_width="133dp"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/tvFotoDescripcion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvFotoAutor"
        tools:text="Jose" />

    <Button
        android:id="@+id/btnVolverZ"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/volver"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv2" />

</androidx.constraintlayout.widget.ConstraintLayout>